@@ -32,7 +32,7 @@
         <postgresql.version>42.7.11</postgresql.version>
         <spring-cloud.version>2025.1.2</spring-cloud.version>
         <bouncycastle.version>1.82</bouncycastle.version>
-        <exchange-core.version>0.5.3</exchange-core.version>
+        <exchange-core.version>0.5.8-emporia</exchange-core.version>
         <aeron.version>1.52.2</aeron.version>
         <chronicle.bom.version>2026.18</chronicle.bom.version>
         <dependency-check.version>12.1.0</dependency-check.version>
@@ -154,6 +154,16 @@
                 <version>3.14.1</version>
                 <configuration>
                     <release>${java.version}</release>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <configuration>
+                    <argLine>
+                        --add-opens=java.base/jdk.internal.misc=ALL-UNNAMED
+                        --add-exports=java.base/jdk.internal.misc=ALL-UNNAMED
+                    </argLine>
                 </configuration>
             </plugin>
             <plugin>
